--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 Django = "^5.0"
 python-dotenv = "^1.0.0"
 sentry-sdk = {extras = ["django"], version = "^1.39.0"}
+whitenoise = "^6.6.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
