fix: circleci python version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
 jobs:
   install-dependencies:
     executor: python/default
+    tag: "3.11"
     steps:
       - checkout
       - python/install-packages:
@@ -12,9 +13,11 @@ jobs:
       - save_cache:
           key: v1-lettings-{{ checksum "pyproject.toml" }}-{{ checksum "poetry.lock" }}
           paths:
+            - $POETRY_CACHE_DIR
             - .venv
   test:
     executor: python/default
+    tag: "3.11"
     steps:
       - checkout
       - restore_cache:
@@ -33,6 +36,7 @@ jobs:
 
   linting:
     executor: python/default
+    tag: "3.11"
     steps:
       - checkout
       - restore_cache:
@@ -40,6 +44,8 @@ jobs:
       - run:
           name: Linting
           command: poetry run flake8
+
+#  build-and-publish:
 
 workflows:
   build-test-and-deploy:
