fix: venv activation for jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           pkg-manager: poetry
       - run:
           name: activate venv
-          command: source .venv/bin/activate
+          command: source $(poetry env info --path)/bin/activate
       - save_cache:
           key: v1-lettings-{{ checksum "pyproject.toml" }}-{{ checksum "poetry.lock" }}
           paths:
