--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,9 @@ jobs:
           name: Deploy to render
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
-            curl -X POST "${RENDER_URL}&imgURL=${DOCKERHUB_USERNAME}%2Foc-lettings-site%3A${TAG}"
+            curl -X POST "${RENDER_URL}" \
+              --data-urlencode "key=${RENDER_KEY}" \
+              --data-urlencode "imgURL=${DOCKERHUB_USERNAME}/oc-lettings-site:${TAG}"
 
 workflows:
   build-test-and-deploy:
