--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,10 +78,12 @@ jobs:
       - run:
           name: Deploy to render
           command: |
+            set -e 
             TAG=0.1.$CIRCLE_BUILD_NUM
-            curl -X POST "${RENDER_URL}" \
+            curl -v --request POST \
               --data-urlencode "key=${RENDER_KEY}" \
-              --data-urlencode "imgURL=${DOCKERHUB_USERNAME}/oc-lettings-site:${TAG}"
+              --data-urlencode "imgURL=${DOCKERHUB_USERNAME}/oc-lettings-site:${TAG}" \
+              "${RENDER_URL}"
 
 workflows:
   build-test-and-deploy:
