--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
       - run:
           name: Build and push application Docker image
           command: |
-            TAG=0.1.$CIRCLE_BUILD_NUM
+            TAG=$CIRCLE_SHA1
             docker build -t $DOCKERHUB_USERNAME/oc-lettings-site:$TAG --build-arg POETRY_CACHE_DIR=$POETRY_CACHE_DIR .
             echo $DOCKERHUB_TOKEN | docker login -u $DOCKERHUB_USERNAME --password-stdin
             docker push $DOCKERHUB_USERNAME/oc-lettings-site:$TAG
@@ -79,7 +79,7 @@ jobs:
           name: Deploy to render
           command: |
             set -e 
-            TAG=0.1.$CIRCLE_BUILD_NUM
+            TAG=$CIRCLE_SHA1
             curl -v -G \
               --data-urlencode "key=${RENDER_KEY}" \
               --data-urlencode "imgURL=docker.io/${DOCKERHUB_USERNAME}/oc-lettings-site:${TAG}" \
