--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ Django = "^5.0"
 python-dotenv = "^1.0.0"
 sentry-sdk = {extras = ["django"], version = "^1.39.0"}
 whitenoise = "^6.6.0"
+sphinx = "^7.2.6"
+sphinxcontrib-django = "^2.5"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
