--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,16 @@ python-dotenv = "^1.0.0"
 sentry-sdk = {extras = ["django"], version = "^1.39.0"}
 whitenoise = "^6.6.0"
 sphinx = "^7.2.6"
-sphinxcontrib-django = "^2.5"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
 pytest-django = "^4.7.0"
 coverage = "^7.3.2"
+
+
+
+[tool.poetry.group.docs.dependencies]
+sphinxcontrib-django = "^2.5"
 
 [build-system]
 requires = ["poetry-core"]
