--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.0"
 sentry-sdk = {extras = ["django"], version = "^1.39.0"}
 whitenoise = "^6.6.0"
 sphinx = "^7.2.6"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
